# _devCourse

./: .gitignore  README.MD  README.md
_100DoCCompPYProBC/: D001bandNameGenerator.py  D002tipCalculator.py
_10DPYBlitz/: D002fib.py  D003groceryStore.py  D004heroGame.py
_advCSS4WebDev/: index.html
_beginnerJS/: .gitignore  README.md  varaible.html
_compGuide2HTML/: 01exercise.html  02exercise.html  03excerciseContactPage.html  03exercise.html  03exerciseMyPets.html  04exerciseTables.css  04exerciseTables.html  05exerciseForm.css  05exerciseForm.html  06exerciseAdvForm.html
_cssForJSDev/: GLOBALSETUP4BOX.css
_fullTimeGoDev/: 01varaibles.go  02customType.go  03enums.go  04flowControl.go  05interFace.go  10advType.go  11advInterfaceTypeFunc.go  12generics.go  13points.go  14testing_test.go  (+2 more)
_rsProComp_ZTM/: Cargo.toml
_rsProComp_ZTM/clipstash/: Cargo.toml
_rsProComp_ZTM/src/: 000libMsg.rs  001activityFunc.rs  002numericTypes.rs  003basicMath.rs  004ifElse.rs  005ifElseLogic.rs  006ifElseIf.rs  007matchDecision.rs  008matchBasic.rs  009basicMatch.rs  010loopBasic.rs  011whileLoop.rs  012enums.rs  013struct.rs  014tuples.rs  015tuples.rs  016ownership.rs  017impl.rs  018vectors.rs  019strings.rs  020advMatch.rs  021optionMatching.rs  022stdLibrary.rs  023results.rs  024resultsQMar.rs  025hashmap.rs  026mapCombinator.rs  028iter.rs  029inlineModule.rs  030testModule.rs  031externalCrate.rs  033activitylib.rs  034userInput.rs  036traits.rs  037genericActivity.rs  038genericStrcuts.rs  040lifetime.rs  041lifetimes.rs  042customErrorType.rs  043newType.rs  (+10 more)
(+946 files in other folders)
