[package]
name = "_rsProComp_ZTM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "activity"
path = "src/033activitylib.rs"

[dependencies]
chrono = "0.4.15"
thiserror = "*"
crossbeam-channel = "*"
colored = "*"
webdev_guide = "0.6.0"