[package]
name = "_rsProComp_ZTM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "activity"
path = "src/033activitylib.rs"

[dependencies]
chrono = "0.4.15"
thiserror = "*"
crossbeam-channel = "*"
colored = "*"

parking_lot = "*"

# [RecommandCrates]
# dotenvy = "*"
# serde = { version = "*", features = ["derive"]}
# serde_json = "*"
# webdev_guide = "0.6.0"
# rand = "*"
# cached = "*"
# regex = "*"
# chrono = "0.4.15"
# strum = { version = "*", features = ["derive"]}
# derive_more = "*"
# rayon = "*"
# tracing = "*"
# color-eyre = "*"